# fed-mRMR

./: .gitignore  Cargo.toml  README.md  a.txt  export.json  iris.show  iris2.show  matrix.adj  notes.md  prueba.csv
benches/: my_benchmark.rs
experimental/: benchmark.sh  benchmark_all_datasets.json  benchmark_colon_increasing_features.json  benchmark_lymphoma_increasing_features.json  benchmark_mnist_federated_increasing_nodes.json  categorial_to_int.py  comparison_original.json  comparison_original_selection.json  discretize.py  mrmr  partition.py  plot_grouped.py  plot_grouped_bars.py  switch.py
src/: dataset.rs  main.rs
test/assets/: dataset-2.csv  dataset.csv  dataset.csv.1  iris.data.disc  test_lung_s3-1.csv  test_lung_s3-2.csv
test/datasets/: ObesityDataSet_raw_and_data_sinthetic.csv  ObesityDataSet_raw_and_data_sinthetic.csv.disc  ObesityDataSet_raw_and_data_sinthetic.csv.disc.switched  all_features.csv  all_features.csv.disc  dataset.csv  disc.r  even_more_features.csv  features.csv  features.csv.disc  letter-recognition.data  lymphography.csv  more_features.csv  more_features.csv.disc
