[package]
name = "mrmr-enhanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
nalgebra = {version = "0.31.0", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra-sparse = {version = "0.7.0", features = ["serde-serialize"]}