[package]
name = "mrmr-enhanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
test=true
doctest=false
doc=false

[dependencies]
csv = "1.1"
nalgebra = {version = "0.31.0", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra-sparse = {version = "0.7.0", features = ["serde-serialize"]}
clap = {version="3.2.5", features =["derive"]}

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name ="my_benchmark"
harness = false
